Connecting frontend to backend in home page